# MyRumae

./: .gitignore  CLAUDE.md  C프로그래밍 (2026-10, 40121_01_U) _ 공지사항 _ 서울시립대학교 온라인강의실.html  README.md  package.json  requirements.txt  강좌_ C프로그래밍 _ 서울시립대학교 온라인강의실.html  사이트에 로그인 _ 서울시립대학교 온라인강의실.html  홈 _ 서울시립대학교 온라인강의실.html
.claude/: HARNESS.md
.claude/agents/: docx-tuner.md  schema-migrator.md  selector-debugger.md  smoke-runner.md  sync-doctor.md
.claude/commands/: db-inspect.md  docs.md  login.md  reset.md  selector-check.md  smoke-collect.md  sync.md
C프로그래밍 (2026-10, 40121_01_U) _ 공지사항 _ 서울시립대학교 온라인강의실_files/: ubion-courseware.umd-prod.js.다운로드
backend/: CLAUDE.md
backend/app/: cli.py  events.py  main.py  selectors.py
backend/app/auth/: CLAUDE.md  credentials.py  login.py  session.py
backend/app/collector/: CLAUDE.md  assignments.py  browser.py  course_page.py  courses.py  folders.py  ubboard.py  ubfile.py
backend/app/db/: CLAUDE.md  database.py  init_db.py  models.py  (+1 more)
backend/scripts/: reset.py  reset_db.py  smoke_collect.py  smoke_docs.py  smoke_login.py  smoke_login_headed.py  smoke_timetable.py
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  state.rs  tray.rs  worker.rs
강좌_ C프로그래밍 _ 서울시립대학교 온라인강의실_files/: js
홈 _ 서울시립대학교 온라인강의실_files/: csmsmedia.js.다운로드  flexiblepage_cm45.js.다운로드  javascript(3).php
(+19 files in other folders)
